--- a/index.html
+++ b/index.html
@@ -43,17 +43,6 @@
         </div>
 
         <div class="tasks">
-
-          <!-- Start Testing Task-->
-          
-          <!-- <div class="task">
-            <div class="circle"><i class="fas fa-check"></i></div>
-            <p>Complete Online JavaScript Course</p>
-            <div class="del"><i class="fas fa-times"></i></div>
-          </div> -->
-
-
-          <!-- End Testing Task-->
           <div class="empty">No todo.</div>
           <div class="bottom-nav">
             <div class="items"> <span></span> items left</div>
@@ -68,6 +57,8 @@
       </div>
     </div>
     
+
+    <footer>© 2022 - <span>Youssef Aboalata</span> , All Right Reserved</footer>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
   </body>
