--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </header>
 
         <div class="type">
-          <div class="add"><i class="fas fa-check"></i></div>
+          <div class="add"><i class="fas fa-plus"></i></div>
           <input type="text" placeholder="Create a new todo..." maxlength="25">
         </div>
 
